@@ -33,6 +33,8 @@ public class TestService {
 
 	private static final Logger log = LoggerFactory.getLogger(TestService.class);
 
+    private static final String JUNIT_PREFIX = "JUnit version 4.12\n.";
+
 	@Autowired
 	@Qualifier("testing")
 	private Executor testing;
@@ -103,7 +105,10 @@ public class TestService {
 		try {
 			log.info("running unittest: {}", file.getName());
 			try {
-				ProcessBuilder pb = new ProcessBuilder(javaExecutable, "-cp", makeClasspath(compileResult.getUser()),
+				ProcessBuilder pb = new ProcessBuilder(javaExecutable,
+				        "-cp", makeClasspath(compileResult.getUser()),
+				        "-Djava.security.manager",
+				        "-Djava.security.policy="+basedir+"/"+ libDirectory + "/securityPolicyForUnitTests.policy",
 						"org.junit.runner.JUnitCore", file.getName());
 				File teamdir = FileUtils.getFile(basedir, teamDirectory, compileResult.getUser());
 				pb.directory(teamdir);
@@ -135,9 +140,9 @@ public class TestService {
 				} else {
 					result = output;
 				}
-				if (result.length() >= 0) {
-					result = result.substring("JUnit version 4.12\n".length());
-					result = result.substring(".".length());
+				if (result.length() > 0) {
+
+				    result = stripJUnitPrefix(result);
 					// if we still have some output left and exitvalue = 0
 					if (result.length() > 0 && exitvalue == 0 ? true : false) {
 						success = true;
@@ -159,6 +164,13 @@ public class TestService {
 		}
 		return null;
 	}
+
+    private String stripJUnitPrefix(String result) {
+        if (result.startsWith(JUNIT_PREFIX)) {
+            return result.substring(JUNIT_PREFIX.length());
+        }
+        return result;
+    }
 
 	private String filteroutput(String output) {
 		String[] split = output.split("\n");
